# autonomous-racecar

./: .gitmodules  README.md
hardware/: Holder_back.step  Main_frame.step  Spring_diameter_adapter.step  Spring_distance_holder.step  Top_plate.step  d435_holder.step
software/base/base/: Dockerfile
software/base/core/: Dockerfile  docker-compose.yml
software/base/dev_arm64/: Dockerfile  Dockerfile.ssh  docker-compose.yml
software/base/dev_arm64/scripts/: ros_entrypoint.sh
software/base/dev_x86_64/: Dockerfile  docker-compose.yml
software/controllers/controller_drive/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
software/controllers/controller_drive/src/: rosdep.yaml
software/controllers/controller_drive/src/controller_drive/: CMakeLists.txt  package.xml  setup.py
software/controllers/controller_drive/src/controller_drive/launch/: controller.launch
software/controllers/controller_drive/src/controller_drive/scripts/: controller
software/controllers/controller_drive/src/controller_drive/src/controller_servo/: config.py  controller.py  joystick.py
software/controllers/controller_drive/src/servo_msgs/: CMakeLists.txt  package.xml
software/drivers/imu/: Dockerfile  docker-compose.yml
software/drivers/joystick/: Dockerfile  docker-compose.yml
software/drivers/lidar/: Dockerfile  docker-compose.yml
software/drivers/lidar/assets/: lidar.launch
software/drivers/servo/: Dockerfile  docker-compose.yml
software/drivers/servo/src/servo/: CMakeLists.txt  package.xml
software/drivers/servo/src/servo/launch/: servo-debug.launch  servo.launch
software/drivers/servo/src/servo/src/: servo.cpp  servo.hpp
software/drivers/servo/src/servo/src/lib/I2C/: I2C.cpp  I2C.h
software/drivers/servo/src/servo/src/lib/PCA9685/: PCA9685.cpp  PCA9685.h
software/drivers/servo/src/servo_msgs/: CMakeLists.txt  package.xml
software/drivers/servo/src/servo_msgs/msg/: ServoState.msg
software/misc/hector_mapping/: Dockerfile  docker-compose.yml
software/misc/hector_mapping/assets/: hector_mapping.launch
software/misc/hector_mapping/src/slam/: CMakeLists.txt  package.xml
software/misc/robot_localization/: Dockerfile  docker-compose.yml
software/misc/robot_localization/assets/: config.yaml  localization.launch
software/misc/robot_localization/src/localization/: CMakeLists.txt  package.xml
software/misc/slam/: Dockerfile  docker-compose.yml
software/misc/slam/assets/: slam.launch
software/misc/slam/src/slam/: CMakeLists.txt  package.xml
software/misc/tf/: Dockerfile  docker-compose.yml
software/misc/tf/assets/: tf-publish.launch
software/misc/tf/src/tf-publish/: CMakeLists.txt  package.xml
