<?xml version="1.0"?>
<package>
    <name>servo</name>
    <version>1.0.0</version>
    <description>The servo controller package</description>

    <maintainer email="me@cynt4k.de">cynt4k</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>servo_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>servo_msgs</run_depend>

</package>
