<?xml version="1.0"?>
<package>
  <name>servo_msgs</name>
  <version>1.0</version>
  <description>The servo_msgs package</description>
  <maintainer email="me@cynt4k.de">cynt4k</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
