<?xml version="1.0"?>
<package>
    <name>localization</name>
    <version>1.0.0</version>
    <description>The localization algorithmus</description>

    <maintainer email="me@cynt4k.de">cynt4k</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>robot_localization</build_depend>
    <run_depend>tf</run_depend>

</package>
