<?xml version="1.0"?>
<package>
    <name>slam</name>
    <version>1.0.0</version>
    <description>The SLAM algorithmus</description>

    <maintainer email="me@cynt4k.de">cynt4k</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>gmapping</build_depend>
    <run_depend>tf</run_depend>

</package>
